--- a/frontend/app/components/Products/ProductCard.module.css
+++ b/frontend/app/components/Products/ProductCard.module.css
@@ -1,4 +1,4 @@
-.compactCard {
+/* .compactCard {
   position: relative;
   box-shadow: inset 0 1px 1px hsl(240, 10%, 20%), 0 2px 4px rgba(0, 0, 0, 0.05);
 }
@@ -16,4 +16,33 @@
   opacity: 0.2;
   z-index: 0;
   border-radius: 6px;
+} */
+
+.compactCard {
+  position: relative;
+  box-shadow: inset 0 1px 1px hsl(240, 10%, 20%), 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+.compactCard::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background: linear-gradient(
+    to bottom right,
+    color-mix(in srgb, var(--theme-color) 50%, transparent),
+    color-mix(in srgb, var(--theme-color) 20%, transparent)
+  );
+
+  opacity: 0.2;
+  z-index: 0;
+  border-radius: 6px;
+}
+
+.compactCard > * {
+  position: relative;
+  z-index: 1;
 }
